--- a/public/chat.html
+++ b/public/chat.html
@@ -41,7 +41,7 @@
             autocomplete="off"
           />
           <button class="btn">
-            ارسال <i class="fas fa-paper-plane" style="margin-right: 5px"></i>
+            <i class="fas fa-paper-plane"></i>
           </button>
         </form>
       </div>
