--- a/public/chat.html
+++ b/public/chat.html
@@ -18,7 +18,7 @@
         <h1>
           گفتگوی آنلاین <i class="fas fa-smile" style="color: #f0c38e"></i>
         </h1>
-        <a href="index.html" class="btn">خروج</a>
+        <a href="index.html" class="btn"><i class="fas fa-power-off"></i></a>
       </header>
       <main class="chat-main">
         <div class="chat-sidebar">
